--- a/SDK/Makefile
+++ b/SDK/Makefile
@@ -106,9 +106,6 @@ DEFINES := \
 	-DCONFIG_EQ_SUPPORT_ASYNC \
 	-DEQ_CORE_V1 \
 	-DCONFIG_BT_CTRLER_IN_MASK \
-	-DCONFIG_CRYPTO_TOOLBOX_OSIZE_IN_MASKROM \
-	-DCONFIG_CRYPTO_RESET_BITS_SZIE_IN_MASKROM \
-	-DCONFIG_CRYPTO_AES_CMC_IN_SDK \
 	-DCONFIG_AAC_CODEC_FFT_USE_MUTEX \
 	-DCONFIG_SIN_TONE_V2 \
 	-DCONFIG_DNS_ENABLE \
@@ -1062,6 +1059,7 @@ LFLAGS := \
 	cpu/br56/liba/libjlsp.a \
 	cpu/br56/liba/libjlsp_kws.a \
 	cpu/br56/liba/libjlsp_kws_far_keyword.a \
+	cpu/br56/liba/libjlsp_kws_india_english.a \
 	cpu/br56/liba/libkwscommon.a \
 	cpu/br56/liba/JL_Phone_Call.a \
 	cpu/br56/liba/crossover_coff.a \
@@ -1120,6 +1118,7 @@ LFLAGS := \
 	cpu/br56/liba/lib_wtg_dec.a \
 	cpu/br56/liba/bfilterfun_lib.a \
 	cpu/br56/liba/lib_opusdec_rom_dec.a \
+	cpu/br56/liba/crypto_toolbox_Osize.a \
 	cpu/br56/liba/lib_dns.a \
 	cpu/br56/liba/update.a \
 	cpu/br56/liba/cbuf.a \
