--- a/SDK/AC710N.cbp
+++ b/SDK/AC710N.cbp
@@ -38,9 +38,6 @@
 <Add option="-DCONFIG_EQ_SUPPORT_ASYNC" />
 <Add option="-DEQ_CORE_V1" />
 <Add option="-DCONFIG_BT_CTRLER_IN_MASK" />
-<Add option="-DCONFIG_CRYPTO_TOOLBOX_OSIZE_IN_MASKROM" />
-<Add option="-DCONFIG_CRYPTO_RESET_BITS_SZIE_IN_MASKROM" />
-<Add option="-DCONFIG_CRYPTO_AES_CMC_IN_SDK" />
 <Add option="-DCONFIG_AAC_CODEC_FFT_USE_MUTEX" />
 <Add option="-DCONFIG_SIN_TONE_V2" />
 <Add option="-DCONFIG_DNS_ENABLE" />
@@ -300,6 +297,7 @@
 <Add option="cpu/br56/liba/libjlsp.a" />
 <Add option="cpu/br56/liba/libjlsp_kws.a" />
 <Add option="cpu/br56/liba/libjlsp_kws_far_keyword.a" />
+<Add option="cpu/br56/liba/libjlsp_kws_india_english.a" />
 <Add option="cpu/br56/liba/libkwscommon.a" />
 <Add option="cpu/br56/liba/JL_Phone_Call.a" />
 <Add option="cpu/br56/liba/crossover_coff.a" />
@@ -358,6 +356,7 @@
 <Add option="cpu/br56/liba/lib_wtg_dec.a" />
 <Add option="cpu/br56/liba/bfilterfun_lib.a" />
 <Add option="cpu/br56/liba/lib_opusdec_rom_dec.a" />
+<Add option="cpu/br56/liba/crypto_toolbox_Osize.a" />
 <Add option="cpu/br56/liba/lib_dns.a" />
 <Add option="cpu/br56/liba/update.a" />
 <Add option="cpu/br56/liba/cbuf.a" />
