--- a/SDK/Makefile
+++ b/SDK/Makefile
@@ -97,6 +97,7 @@ DEFINES := \
 	-DCONFIG_CPU_BR56 \
 	-DCONFIG_USB_SUPPORT_MRX_TX \
 	-DCONFIG_IIC_VERSION2 \
+	-DLWIP_USE_BT \
 	-DCONFIG_SUPPORT_AES_CCM_FOR_EDR \
 	-DCONFIG_AES_CCM_RXMAXBUF_EXT_MICLEN \
 	-DCONFIG_NEW_BREDR_ENABLE \
@@ -106,6 +107,9 @@ DEFINES := \
 	-DCONFIG_EQ_SUPPORT_ASYNC \
 	-DEQ_CORE_V1 \
 	-DCONFIG_BT_CTRLER_IN_MASK \
+	-DCONFIG_CRYPTO_TOOLBOX_OSIZE_IN_MASKROM \
+	-DCONFIG_CRYPTO_RESET_BITS_SZIE_IN_MASKROM \
+	-DCONFIG_CRYPTO_AES_CMC_IN_SDK \
 	-DCONFIG_AAC_CODEC_FFT_USE_MUTEX \
 	-DCONFIG_SIN_TONE_V2 \
 	-DCONFIG_DNS_ENABLE \
@@ -609,6 +613,7 @@ c_SRC_FILES := \
 	apps/earphone/ble/bt_ble.c \
 	apps/earphone/board/br56/board_config.c \
 	apps/earphone/board/br56/undef_func.c \
+	apps/earphone/board/instruction_forbidden.c \
 	apps/earphone/board/sdk_board_config.c \
 	apps/earphone/demo/att_over_edr_demo.c \
 	apps/earphone/demo/debug_record_demo.c \
@@ -1120,7 +1125,6 @@ LFLAGS := \
 	cpu/br56/liba/lib_wtg_dec.a \
 	cpu/br56/liba/bfilterfun_lib.a \
 	cpu/br56/liba/lib_opusdec_rom_dec.a \
-	cpu/br56/liba/crypto_toolbox_Osize.a \
 	cpu/br56/liba/lib_dns.a \
 	cpu/br56/liba/update.a \
 	cpu/br56/liba/cbuf.a \
