--- a/SDK/AC710N.cbp
+++ b/SDK/AC710N.cbp
@@ -685,6 +685,7 @@
 <Unit filename="apps/common/third_party_profile/jieli/rcsp/rcsp_functions/rcsp_task.c"><Option compilerVer="CC"/></Unit>
 <Unit filename="apps/common/third_party_profile/jieli/rcsp/rcsp_functions/rcsp_task.h" />
 <Unit filename="apps/common/third_party_profile/jieli/rcsp/rcsp_interface.c"><Option compilerVer="CC"/></Unit>
+<Unit filename="apps/common/third_party_profile/jieli/rcsp/rcsp_simplified/rcsp_interface_simplified.c"><Option compilerVer="CC"/></Unit>
 <Unit filename="apps/common/third_party_profile/jieli/rcsp/rcsp_user_api.h" />
 <Unit filename="apps/common/third_party_profile/jieli/rcsp/server/functions/browser/rcsp_browser.c"><Option compilerVer="CC"/></Unit>
 <Unit filename="apps/common/third_party_profile/jieli/rcsp/server/functions/browser/rcsp_browser.h" />
@@ -1102,6 +1103,8 @@
 <Unit filename="apps/earphone/ui/led/led_config.c"><Option compilerVer="CC"/></Unit>
 <Unit filename="apps/earphone/ui/led/led_ui_msg_handler.c"><Option compilerVer="CC"/></Unit>
 <Unit filename="apps/earphone/user_cfg.c"><Option compilerVer="CC"/></Unit>
+<Unit filename="audio/CVP/audio_aec.c"><Option compilerVer="CC"/></Unit>
+<Unit filename="audio/CVP/audio_aec.h" />
 <Unit filename="audio/CVP/audio_cvp.c"><Option compilerVer="CC"/></Unit>
 <Unit filename="audio/CVP/audio_cvp.h" />
 <Unit filename="audio/CVP/audio_cvp_3mic.c"><Option compilerVer="CC"/></Unit>
