--- a/SDK/AC710N.cbp
+++ b/SDK/AC710N.cbp
@@ -27,7 +27,6 @@
 <Add option="-DCONFIG_RELEASE_ENABLE" />
 <Add option="-DCONFIG_EARPHONE_CASE" />
 <Add option="-DCONFIG_CPU_BR56" />
-<Add option="-DCONFIG_USB_SUPPORT_MRX_TX" />
 <Add option="-DCONFIG_IIC_VERSION2" />
 <Add option="-DLWIP_USE_BT" />
 <Add option="-DCONFIG_SUPPORT_AES_CCM_FOR_EDR" />
@@ -101,15 +100,19 @@
 <Add directory="interface/btstack/third_party/common" />
 <Add directory="interface/btstack/third_party" />
 <Add directory="interface/utils" />
+<Add directory="interface/utils/generic" />
 <Add directory="interface/utils/device" />
 <Add directory="interface/utils/fs" />
-<Add directory="interface/utils/generic" />
 <Add directory="interface/utils/math/cpu/br56" />
+<Add directory="interface/net/mbedtls_3_4_0" />
 <Add directory="interface/btstack/third_party/rcsp" />
 <Add directory="interface/media/media_new" />
 <Add directory="interface/media/media_new/media" />
 <Add directory="interface/media/media_new/media/cpu/br56" />
 <Add directory="interface/media/media_new/media/cpu/br56/asm" />
+<Add directory="interface/net/lwip_2_2_0/lwip/src/include" />
+<Add directory="interface/net/lwip_2_2_0/lwip/port" />
+<Add directory="interface/net/lwip_2_2_0/lwip/app" />
 <Add directory="apps/earphone" />
 <Add directory="apps/earphone/include" />
 <Add directory="apps/earphone/include/wireless_mic" />
@@ -140,6 +143,7 @@
 <Add directory="audio/common" />
 <Add directory="audio/effect" />
 <Add directory="apps/common/device/sensor/imu_sensor" />
+<Add directory="interface/net/lwip_2_2_0/lwip/src" />
 <Add directory="apps/common/third_party_profile/jieli/rcsp" />
 <Add directory="apps/common/third_party_profile/jieli/rcsp/adv" />
 <Add directory="apps/common/third_party_profile/jieli/rcsp/rcsp_functions" />
@@ -360,6 +364,7 @@
 <Add option="cpu/br56/liba/lib_wtg_dec.a" />
 <Add option="cpu/br56/liba/bfilterfun_lib.a" />
 <Add option="cpu/br56/liba/lib_opusdec_rom_dec.a" />
+<Add option="cpu/br56/liba/crypto_toolbox_Osize.a" />
 <Add option="cpu/br56/liba/lib_dns.a" />
 <Add option="cpu/br56/liba/update.a" />
 <Add option="cpu/br56/liba/cbuf.a" />
@@ -1036,6 +1041,7 @@
 <Unit filename="apps/earphone/log_config/lib_btstack_config.c"><Option compilerVer="CC"/></Unit>
 <Unit filename="apps/earphone/log_config/lib_driver_config.c"><Option compilerVer="CC"/></Unit>
 <Unit filename="apps/earphone/log_config/lib_media_config.c"><Option compilerVer="CC"/></Unit>
+<Unit filename="apps/earphone/log_config/lib_net_config.c"><Option compilerVer="CC"/></Unit>
 <Unit filename="apps/earphone/log_config/lib_system_config.c"><Option compilerVer="CC"/></Unit>
 <Unit filename="apps/earphone/log_config/lib_update_config.c"><Option compilerVer="CC"/></Unit>
 <Unit filename="apps/earphone/message/adapter/app_msg.c"><Option compilerVer="CC"/></Unit>
